parser.output
   0  $accept : %entry% $end

   1  functions : p_functions EOF

   2  p_functions :
   3              | NEWLINE p_functions
   4              | p_function p_functions

   5  p_function_annotation :
   6                        | KEYWORD_ASYNC
   7                        | KEYWORD_ASYNC KEYWORD_REMOTE

   8  p_function_prototype : p_function_annotation KEYWORD_FUNC VARIABLE LEFT_PARENTHE p_parameters RIGHT_PARENTHE p_type
   9                       | p_function_annotation KEYWORD_FUNC VARIABLE LEFT_PARENTHE p_parameters RIGHT_PARENTHE
  10                       | p_function_annotation KEYWORD_FUNC VARIABLE LEFT_PARENTHE p_parameters RIGHT_PARENTHE LEFT_PARENTHE p_type_list RIGHT_PARENTHE

  11  p_function_impl : LEFT_BRACE NEWLINE p_statements RIGHT_BRACE

  12  p_function : p_function_prototype p_function_impl

  13  p_type_list : p_type
  14              | p_type COMMA p_type_list

  15  p_variable_list : VARIABLE
  16                  | VARIABLE COMMA p_variable_list

  17  p_parameters :
  18               | p_parameter
  19               | p_parameter COMMA p_parameters

  20  p_parameter : VARIABLE p_type

  21  p_expr_list :
  22              | p_expr_list_required

  23  p_expr_list_required : p_expr
  24                       | p_expr COMMA p_expr_list_required

  25  p_expr : p_expr PLUS p_expr
  26         | p_expr MINUS p_expr
  27         | p_expr TIMES p_expr
  28         | p_expr DIVIDE p_expr
  29         | p_expr MODSIGN p_expr
  30         | p_expr IS_LESS_THAN p_expr
  31         | p_expr IS_GREATER_THAN p_expr
  32         | p_expr IS_NOT_EQUAL p_expr
  33         | p_expr IS_EQUAL p_expr
  34         | p_expr IS_LESS_EQUAL p_expr
  35         | p_expr IS_GREATER_EQUAL p_expr
  36         | p_expr LOGICAL_AND p_expr
  37         | p_expr LOGICAL_OR p_expr
  38         | MINUS p_expr
  39         | LOGICAL_NOT p_expr
  40         | p_expr ASSIGNMENT p_expr
  41         | p_literal
  42         | VARIABLE
  43         | VARIABLE LEFT_PARENTHE p_expr_list RIGHT_PARENTHE
  44         | KEYWORD_AWAIT VARIABLE
  45         | KEYWORD_GATHER LEFT_PARENTHE p_expr_list RIGHT_PARENTHE
  46         | KEYWORD_LEN LEFT_PARENTHE p_expr_list RIGHT_PARENTHE
  47         | KEYWORD_APPEND LEFT_PARENTHE p_expr_list RIGHT_PARENTHE
  48         | LEFT_PARENTHE p_expr RIGHT_PARENTHE
  49         | p_slice_type LEFT_BRACE p_expr_list RIGHT_BRACE
  50         | p_expr LEFT_BRACKET p_expr RIGHT_BRACKET
  51         | p_expr LEFT_BRACKET p_expr COLON p_expr RIGHT_BRACKET
  52         | p_expr LEFT_BRACKET COLON p_expr RIGHT_BRACKET
  53         | p_expr LEFT_BRACKET p_expr COLON RIGHT_BRACKET

  54  p_slice_type : LEFT_BRACKET RIGHT_BRACKET p_type

  55  p_type : KEYWORD_STRING
  56         | KEYWORD_INT
  57         | KEYWORD_FLOAT
  58         | KEYWORD_BOOL
  59         | KEYWORD_FUTURE
  60         | p_slice_type

  61  p_literal : INT_LITERAL
  62            | STRING_LITERAL
  63            | FLOAT_LITERAL
  64            | BOOLEAN_LITERAL

  65  p_statements :
  66               | NEWLINE p_statements
  67               | p_statement p_statements

  68  p_if_statement : KEYWORD_IF p_expr LEFT_BRACE NEWLINE p_statements RIGHT_BRACE KEYWORD_ELSE LEFT_BRACE p_statements RIGHT_BRACE
  69                 | KEYWORD_IF p_expr LEFT_BRACE NEWLINE p_statements RIGHT_BRACE KEYWORD_ELSE p_if_statement
  70                 | KEYWORD_IF p_expr LEFT_BRACE NEWLINE p_statements RIGHT_BRACE

  71  p_simple_statement : p_expr
  72                     | KEYWORD_VAR p_variable_list p_type_list ASSIGNMENT p_expr_list_required
  73                     | KEYWORD_VAR p_variable_list p_type_list
  74                     | p_variable_list ASSIGNNEW p_expr_list_required

  75  p_statement : p_expr NEWLINE
  76              | KEYWORD_RETURN p_expr_list NEWLINE
  77              | KEYWORD_VAR p_variable_list p_type_list ASSIGNMENT p_expr_list_required NEWLINE
  78              | KEYWORD_VAR p_variable_list p_type_list NEWLINE
  79              | p_variable_list ASSIGNNEW p_expr_list_required NEWLINE
  80              | p_if_statement
  81              | KEYWORD_FOR p_simple_statement SEMICOLON p_expr SEMICOLON p_simple_statement LEFT_BRACE NEWLINE p_statements RIGHT_BRACE
  82              | KEYWORD_FOR p_expr LEFT_BRACE NEWLINE p_statements RIGHT_BRACE
  83              | KEYWORD_FOR LEFT_BRACE NEWLINE p_statements RIGHT_BRACE
  84              | KEYWORD_BREAK NEWLINE
  85              | KEYWORD_CONTINUE NEWLINE

  86  %entry% : '\001' functions

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . functions  (86)
	p_functions : .  (2)
	p_function_annotation : .  (5)

	NEWLINE  shift 3
	KEYWORD_ASYNC  shift 4
	EOF  reduce 2
	KEYWORD_FUNC  reduce 5

	functions  goto 5
	p_functions  goto 6
	p_function  goto 7
	p_function_annotation  goto 8
	p_function_prototype  goto 9


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	p_functions : NEWLINE . p_functions  (3)
	p_functions : .  (2)
	p_function_annotation : .  (5)

	NEWLINE  shift 3
	KEYWORD_ASYNC  shift 4
	EOF  reduce 2
	KEYWORD_FUNC  reduce 5

	p_functions  goto 10
	p_function  goto 7
	p_function_annotation  goto 8
	p_function_prototype  goto 9


state 4
	p_function_annotation : KEYWORD_ASYNC .  (6)
	p_function_annotation : KEYWORD_ASYNC . KEYWORD_REMOTE  (7)

	KEYWORD_REMOTE  shift 11
	KEYWORD_FUNC  reduce 6


state 5
	%entry% : '\001' functions .  (86)

	.  reduce 86


state 6
	functions : p_functions . EOF  (1)

	EOF  shift 12
	.  error


state 7
	p_functions : p_function . p_functions  (4)
	p_functions : .  (2)
	p_function_annotation : .  (5)

	NEWLINE  shift 3
	KEYWORD_ASYNC  shift 4
	EOF  reduce 2
	KEYWORD_FUNC  reduce 5

	p_functions  goto 13
	p_function  goto 7
	p_function_annotation  goto 8
	p_function_prototype  goto 9


state 8
	p_function_prototype : p_function_annotation . KEYWORD_FUNC VARIABLE LEFT_PARENTHE p_parameters RIGHT_PARENTHE p_type  (8)
	p_function_prototype : p_function_annotation . KEYWORD_FUNC VARIABLE LEFT_PARENTHE p_parameters RIGHT_PARENTHE  (9)
	p_function_prototype : p_function_annotation . KEYWORD_FUNC VARIABLE LEFT_PARENTHE p_parameters RIGHT_PARENTHE LEFT_PARENTHE p_type_list RIGHT_PARENTHE  (10)

	KEYWORD_FUNC  shift 14
	.  error


state 9
	p_function : p_function_prototype . p_function_impl  (12)

	LEFT_BRACE  shift 15
	.  error

	p_function_impl  goto 16


state 10
	p_functions : NEWLINE p_functions .  (3)

	.  reduce 3


state 11
	p_function_annotation : KEYWORD_ASYNC KEYWORD_REMOTE .  (7)

	.  reduce 7


state 12
	functions : p_functions EOF .  (1)

	.  reduce 1


state 13
	p_functions : p_function p_functions .  (4)

	.  reduce 4


state 14
	p_function_prototype : p_function_annotation KEYWORD_FUNC . VARIABLE LEFT_PARENTHE p_parameters RIGHT_PARENTHE p_type  (8)
	p_function_prototype : p_function_annotation KEYWORD_FUNC . VARIABLE LEFT_PARENTHE p_parameters RIGHT_PARENTHE  (9)
	p_function_prototype : p_function_annotation KEYWORD_FUNC . VARIABLE LEFT_PARENTHE p_parameters RIGHT_PARENTHE LEFT_PARENTHE p_type_list RIGHT_PARENTHE  (10)

	VARIABLE  shift 17
	.  error


state 15
	p_function_impl : LEFT_BRACE . NEWLINE p_statements RIGHT_BRACE  (11)

	NEWLINE  shift 18
	.  error


state 16
	p_function : p_function_prototype p_function_impl .  (12)

	.  reduce 12


state 17
	p_function_prototype : p_function_annotation KEYWORD_FUNC VARIABLE . LEFT_PARENTHE p_parameters RIGHT_PARENTHE p_type  (8)
	p_function_prototype : p_function_annotation KEYWORD_FUNC VARIABLE . LEFT_PARENTHE p_parameters RIGHT_PARENTHE  (9)
	p_function_prototype : p_function_annotation KEYWORD_FUNC VARIABLE . LEFT_PARENTHE p_parameters RIGHT_PARENTHE LEFT_PARENTHE p_type_list RIGHT_PARENTHE  (10)

	LEFT_PARENTHE  shift 19
	.  error


state 18
	p_function_impl : LEFT_BRACE NEWLINE . p_statements RIGHT_BRACE  (11)
	p_statements : .  (65)

	NEWLINE  shift 20
	MINUS  shift 21
	LOGICAL_NOT  shift 22
	LEFT_BRACKET  shift 23
	LEFT_PARENTHE  shift 24
	INT_LITERAL  shift 25
	STRING_LITERAL  shift 26
	FLOAT_LITERAL  shift 27
	BOOLEAN_LITERAL  shift 28
	VARIABLE  shift 29
	KEYWORD_FOR  shift 30
	KEYWORD_IF  shift 31
	KEYWORD_RETURN  shift 32
	KEYWORD_AWAIT  shift 33
	KEYWORD_VAR  shift 34
	KEYWORD_CONTINUE  shift 35
	KEYWORD_BREAK  shift 36
	KEYWORD_GATHER  shift 37
	KEYWORD_LEN  shift 38
	KEYWORD_APPEND  shift 39
	RIGHT_BRACE  reduce 65

	p_statements  goto 40
	p_variable_list  goto 41
	p_expr  goto 42
	p_literal  goto 43
	p_slice_type  goto 44
	p_statement  goto 45
	p_if_statement  goto 46


state 19
	p_function_prototype : p_function_annotation KEYWORD_FUNC VARIABLE LEFT_PARENTHE . p_parameters RIGHT_PARENTHE p_type  (8)
	p_function_prototype : p_function_annotation KEYWORD_FUNC VARIABLE LEFT_PARENTHE . p_parameters RIGHT_PARENTHE  (9)
	p_function_prototype : p_function_annotation KEYWORD_FUNC VARIABLE LEFT_PARENTHE . p_parameters RIGHT_PARENTHE LEFT_PARENTHE p_type_list RIGHT_PARENTHE  (10)
	p_parameters : .  (17)

	VARIABLE  shift 47
	RIGHT_PARENTHE  reduce 17

	p_parameters  goto 48
	p_parameter  goto 49


state 20
	p_statements : NEWLINE . p_statements  (66)
	p_statements : .  (65)

	NEWLINE  shift 20
	MINUS  shift 21
	LOGICAL_NOT  shift 22
	LEFT_BRACKET  shift 23
	LEFT_PARENTHE  shift 24
	INT_LITERAL  shift 25
	STRING_LITERAL  shift 26
	FLOAT_LITERAL  shift 27
	BOOLEAN_LITERAL  shift 28
	VARIABLE  shift 29
	KEYWORD_FOR  shift 30
	KEYWORD_IF  shift 31
	KEYWORD_RETURN  shift 32
	KEYWORD_AWAIT  shift 33
	KEYWORD_VAR  shift 34
	KEYWORD_CONTINUE  shift 35
	KEYWORD_BREAK  shift 36
	KEYWORD_GATHER  shift 37
	KEYWORD_LEN  shift 38
	KEYWORD_APPEND  shift 39
	RIGHT_BRACE  reduce 65

	p_statements  goto 50
	p_variable_list  goto 41
	p_expr  goto 42
	p_literal  goto 43
	p_slice_type  goto 44
	p_statement  goto 45
	p_if_statement  goto 46


state 21
	p_expr : MINUS . p_expr  (38)

	MINUS  shift 21
	LOGICAL_NOT  shift 22
	LEFT_BRACKET  shift 23
	LEFT_PARENTHE  shift 24
	INT_LITERAL  shift 25
	STRING_LITERAL  shift 26
	FLOAT_LITERAL  shift 27
	BOOLEAN_LITERAL  shift 28
	VARIABLE  shift 51
	KEYWORD_AWAIT  shift 33
	KEYWORD_GATHER  shift 37
	KEYWORD_LEN  shift 38
	KEYWORD_APPEND  shift 39
	.  error

	p_expr  goto 52
	p_literal  goto 43
	p_slice_type  goto 44


state 22
	p_expr : LOGICAL_NOT . p_expr  (39)

	MINUS  shift 21
	LOGICAL_NOT  shift 22
	LEFT_BRACKET  shift 23
	LEFT_PARENTHE  shift 24
	INT_LITERAL  shift 25
	STRING_LITERAL  shift 26
	FLOAT_LITERAL  shift 27
	BOOLEAN_LITERAL  shift 28
	VARIABLE  shift 51
	KEYWORD_AWAIT  shift 33
	KEYWORD_GATHER  shift 37
	KEYWORD_LEN  shift 38
	KEYWORD_APPEND  shift 39
	.  error

	p_expr  goto 53
	p_literal  goto 43
	p_slice_type  goto 44


state 23
	p_slice_type : LEFT_BRACKET . RIGHT_BRACKET p_type  (54)

	RIGHT_BRACKET  shift 54
	.  error


state 24
	p_expr : LEFT_PARENTHE . p_expr RIGHT_PARENTHE  (48)

	MINUS  shift 21
	LOGICAL_NOT  shift 22
	LEFT_BRACKET  shift 23
	LEFT_PARENTHE  shift 24
	INT_LITERAL  shift 25
	STRING_LITERAL  shift 26
	FLOAT_LITERAL  shift 27
	BOOLEAN_LITERAL  shift 28
	VARIABLE  shift 51
	KEYWORD_AWAIT  shift 33
	KEYWORD_GATHER  shift 37
	KEYWORD_LEN  shift 38
	KEYWORD_APPEND  shift 39
	.  error

	p_expr  goto 55
	p_literal  goto 43
	p_slice_type  goto 44


state 25
	p_literal : INT_LITERAL .  (61)

	.  reduce 61


state 26
	p_literal : STRING_LITERAL .  (62)

	.  reduce 62


state 27
	p_literal : FLOAT_LITERAL .  (63)

	.  reduce 63


state 28
	p_literal : BOOLEAN_LITERAL .  (64)

	.  reduce 64


state 29
	p_variable_list : VARIABLE .  (15)
	p_variable_list : VARIABLE . COMMA p_variable_list  (16)
	p_expr : VARIABLE .  (42)
	p_expr : VARIABLE . LEFT_PARENTHE p_expr_list RIGHT_PARENTHE  (43)

	LEFT_PARENTHE  shift 56
	COMMA  shift 57
	NEWLINE  reduce 42
	PLUS  reduce 42
	MINUS  reduce 42
	TIMES  reduce 42
	DIVIDE  reduce 42
	MODSIGN  reduce 42
	LOGICAL_OR  reduce 42
	LOGICAL_AND  reduce 42
	IS_EQUAL  reduce 42
	IS_NOT_EQUAL  reduce 42
	IS_LESS_THAN  reduce 42
	IS_GREATER_THAN  reduce 42
	IS_LESS_EQUAL  reduce 42
	IS_GREATER_EQUAL  reduce 42
	LEFT_BRACE  reduce 42
	LEFT_BRACKET  reduce 42
	ASSIGNMENT  reduce 42
	ASSIGNNEW  reduce 15
	SEMICOLON  reduce 42


state 30
	p_statement : KEYWORD_FOR . p_simple_statement SEMICOLON p_expr SEMICOLON p_simple_statement LEFT_BRACE NEWLINE p_statements RIGHT_BRACE  (81)
	p_statement : KEYWORD_FOR . p_expr LEFT_BRACE NEWLINE p_statements RIGHT_BRACE  (82)
	p_statement : KEYWORD_FOR . LEFT_BRACE NEWLINE p_statements RIGHT_BRACE  (83)

	MINUS  shift 21
	LOGICAL_NOT  shift 22
	LEFT_BRACE  shift 58
	LEFT_BRACKET  shift 23
	LEFT_PARENTHE  shift 24
	INT_LITERAL  shift 25
	STRING_LITERAL  shift 26
	FLOAT_LITERAL  shift 27
	BOOLEAN_LITERAL  shift 28
	VARIABLE  shift 29
	KEYWORD_AWAIT  shift 33
	KEYWORD_VAR  shift 59
	KEYWORD_GATHER  shift 37
	KEYWORD_LEN  shift 38
	KEYWORD_APPEND  shift 39
	.  error

	p_variable_list  goto 60
	p_expr  goto 61
	p_literal  goto 43
	p_slice_type  goto 44
	p_simple_statement  goto 62


state 31
	p_if_statement : KEYWORD_IF . p_expr LEFT_BRACE NEWLINE p_statements RIGHT_BRACE KEYWORD_ELSE LEFT_BRACE p_statements RIGHT_BRACE  (68)
	p_if_statement : KEYWORD_IF . p_expr LEFT_BRACE NEWLINE p_statements RIGHT_BRACE KEYWORD_ELSE p_if_statement  (69)
	p_if_statement : KEYWORD_IF . p_expr LEFT_BRACE NEWLINE p_statements RIGHT_BRACE  (70)

	MINUS  shift 21
	LOGICAL_NOT  shift 22
	LEFT_BRACKET  shift 23
	LEFT_PARENTHE  shift 24
	INT_LITERAL  shift 25
	STRING_LITERAL  shift 26
	FLOAT_LITERAL  shift 27
	BOOLEAN_LITERAL  shift 28
	VARIABLE  shift 51
	KEYWORD_AWAIT  shift 33
	KEYWORD_GATHER  shift 37
	KEYWORD_LEN  shift 38
	KEYWORD_APPEND  shift 39
	.  error

	p_expr  goto 63
	p_literal  goto 43
	p_slice_type  goto 44


state 32
	p_statement : KEYWORD_RETURN . p_expr_list NEWLINE  (76)
	p_expr_list : .  (21)

	MINUS  shift 21
	LOGICAL_NOT  shift 22
	LEFT_BRACKET  shift 23
	LEFT_PARENTHE  shift 24
	INT_LITERAL  shift 25
	STRING_LITERAL  shift 26
	FLOAT_LITERAL  shift 27
	BOOLEAN_LITERAL  shift 28
	VARIABLE  shift 51
	KEYWORD_AWAIT  shift 33
	KEYWORD_GATHER  shift 37
	KEYWORD_LEN  shift 38
	KEYWORD_APPEND  shift 39
	NEWLINE  reduce 21

	p_expr_list  goto 64
	p_expr_list_required  goto 65
	p_expr  goto 66
	p_literal  goto 43
	p_slice_type  goto 44


state 33
	p_expr : KEYWORD_AWAIT . VARIABLE  (44)

	VARIABLE  shift 67
	.  error


state 34
	p_statement : KEYWORD_VAR . p_variable_list p_type_list ASSIGNMENT p_expr_list_required NEWLINE  (77)
	p_statement : KEYWORD_VAR . p_variable_list p_type_list NEWLINE  (78)

	VARIABLE  shift 68
	.  error

	p_variable_list  goto 69


state 35
	p_statement : KEYWORD_CONTINUE . NEWLINE  (85)

	NEWLINE  shift 70
	.  error


state 36
	p_statement : KEYWORD_BREAK . NEWLINE  (84)

	NEWLINE  shift 71
	.  error


state 37
	p_expr : KEYWORD_GATHER . LEFT_PARENTHE p_expr_list RIGHT_PARENTHE  (45)

	LEFT_PARENTHE  shift 72
	.  error


state 38
	p_expr : KEYWORD_LEN . LEFT_PARENTHE p_expr_list RIGHT_PARENTHE  (46)

	LEFT_PARENTHE  shift 73
	.  error


state 39
	p_expr : KEYWORD_APPEND . LEFT_PARENTHE p_expr_list RIGHT_PARENTHE  (47)

	LEFT_PARENTHE  shift 74
	.  error


state 40
	p_function_impl : LEFT_BRACE NEWLINE p_statements . RIGHT_BRACE  (11)

	RIGHT_BRACE  shift 75
	.  error


state 41
	p_statement : p_variable_list . ASSIGNNEW p_expr_list_required NEWLINE  (79)

	ASSIGNNEW  shift 76
	.  error


state 42
	p_expr : p_expr . PLUS p_expr  (25)
	p_expr : p_expr . MINUS p_expr  (26)
	p_expr : p_expr . TIMES p_expr  (27)
	p_expr : p_expr . DIVIDE p_expr  (28)
	p_expr : p_expr . MODSIGN p_expr  (29)
	p_expr : p_expr . IS_LESS_THAN p_expr  (30)
	p_expr : p_expr . IS_GREATER_THAN p_expr  (31)
	p_expr : p_expr . IS_NOT_EQUAL p_expr  (32)
	p_expr : p_expr . IS_EQUAL p_expr  (33)
	p_expr : p_expr . IS_LESS_EQUAL p_expr  (34)
	p_expr : p_expr . IS_GREATER_EQUAL p_expr  (35)
	p_expr : p_expr . LOGICAL_AND p_expr  (36)
	p_expr : p_expr . LOGICAL_OR p_expr  (37)
	p_expr : p_expr . ASSIGNMENT p_expr  (40)
	p_expr : p_expr . LEFT_BRACKET p_expr RIGHT_BRACKET  (50)
	p_expr : p_expr . LEFT_BRACKET p_expr COLON p_expr RIGHT_BRACKET  (51)
	p_expr : p_expr . LEFT_BRACKET COLON p_expr RIGHT_BRACKET  (52)
	p_expr : p_expr . LEFT_BRACKET p_expr COLON RIGHT_BRACKET  (53)
	p_statement : p_expr . NEWLINE  (75)

	NEWLINE  shift 77
	PLUS  shift 78
	MINUS  shift 79
	TIMES  shift 80
	DIVIDE  shift 81
	MODSIGN  shift 82
	LOGICAL_OR  shift 83
	LOGICAL_AND  shift 84
	IS_EQUAL  shift 85
	IS_NOT_EQUAL  shift 86
	IS_LESS_THAN  shift 87
	IS_GREATER_THAN  shift 88
	IS_LESS_EQUAL  shift 89
	IS_GREATER_EQUAL  shift 90
	LEFT_BRACKET  shift 91
	ASSIGNMENT  shift 92
	.  error


state 43
	p_expr : p_literal .  (41)

	.  reduce 41


state 44
	p_expr : p_slice_type . LEFT_BRACE p_expr_list RIGHT_BRACE  (49)

	LEFT_BRACE  shift 93
	.  error


state 45
	p_statements : p_statement . p_statements  (67)
	p_statements : .  (65)

	NEWLINE  shift 20
	MINUS  shift 21
	LOGICAL_NOT  shift 22
	LEFT_BRACKET  shift 23
	LEFT_PARENTHE  shift 24
	INT_LITERAL  shift 25
	STRING_LITERAL  shift 26
	FLOAT_LITERAL  shift 27
	BOOLEAN_LITERAL  shift 28
	VARIABLE  shift 29
	KEYWORD_FOR  shift 30
	KEYWORD_IF  shift 31
	KEYWORD_RETURN  shift 32
	KEYWORD_AWAIT  shift 33
	KEYWORD_VAR  shift 34
	KEYWORD_CONTINUE  shift 35
	KEYWORD_BREAK  shift 36
	KEYWORD_GATHER  shift 37
	KEYWORD_LEN  shift 38
	KEYWORD_APPEND  shift 39
	RIGHT_BRACE  reduce 65

	p_statements  goto 94
	p_variable_list  goto 41
	p_expr  goto 42
	p_literal  goto 43
	p_slice_type  goto 44
	p_statement  goto 45
	p_if_statement  goto 46


state 46
	p_statement : p_if_statement .  (80)

	.  reduce 80


state 47
	p_parameter : VARIABLE . p_type  (20)

	LEFT_BRACKET  shift 23
	KEYWORD_STRING  shift 95
	KEYWORD_INT  shift 96
	KEYWORD_FLOAT  shift 97
	KEYWORD_BOOL  shift 98
	KEYWORD_FUTURE  shift 99
	.  error

	p_type  goto 100
	p_slice_type  goto 101


state 48
	p_function_prototype : p_function_annotation KEYWORD_FUNC VARIABLE LEFT_PARENTHE p_parameters . RIGHT_PARENTHE p_type  (8)
	p_function_prototype : p_function_annotation KEYWORD_FUNC VARIABLE LEFT_PARENTHE p_parameters . RIGHT_PARENTHE  (9)
	p_function_prototype : p_function_annotation KEYWORD_FUNC VARIABLE LEFT_PARENTHE p_parameters . RIGHT_PARENTHE LEFT_PARENTHE p_type_list RIGHT_PARENTHE  (10)

	RIGHT_PARENTHE  shift 102
	.  error


state 49
	p_parameters : p_parameter .  (18)
	p_parameters : p_parameter . COMMA p_parameters  (19)

	COMMA  shift 103
	RIGHT_PARENTHE  reduce 18


state 50
	p_statements : NEWLINE p_statements .  (66)

	.  reduce 66


state 51
	p_expr : VARIABLE .  (42)
	p_expr : VARIABLE . LEFT_PARENTHE p_expr_list RIGHT_PARENTHE  (43)

	LEFT_PARENTHE  shift 56
	NEWLINE  reduce 42
	PLUS  reduce 42
	MINUS  reduce 42
	TIMES  reduce 42
	DIVIDE  reduce 42
	MODSIGN  reduce 42
	LOGICAL_OR  reduce 42
	LOGICAL_AND  reduce 42
	IS_EQUAL  reduce 42
	IS_NOT_EQUAL  reduce 42
	IS_LESS_THAN  reduce 42
	IS_GREATER_THAN  reduce 42
	IS_LESS_EQUAL  reduce 42
	IS_GREATER_EQUAL  reduce 42
	LEFT_BRACE  reduce 42
	RIGHT_BRACE  reduce 42
	LEFT_BRACKET  reduce 42
	RIGHT_BRACKET  reduce 42
	RIGHT_PARENTHE  reduce 42
	ASSIGNMENT  reduce 42
	SEMICOLON  reduce 42
	COLON  reduce 42
	COMMA  reduce 42


52: shift/reduce conflict (shift 91, reduce 38) on LEFT_BRACKET
state 52
	p_expr : p_expr . PLUS p_expr  (25)
	p_expr : p_expr . MINUS p_expr  (26)
	p_expr : p_expr . TIMES p_expr  (27)
	p_expr : p_expr . DIVIDE p_expr  (28)
	p_expr : p_expr . MODSIGN p_expr  (29)
	p_expr : p_expr . IS_LESS_THAN p_expr  (30)
	p_expr : p_expr . IS_GREATER_THAN p_expr  (31)
	p_expr : p_expr . IS_NOT_EQUAL p_expr  (32)
	p_expr : p_expr . IS_EQUAL p_expr  (33)
	p_expr : p_expr . IS_LESS_EQUAL p_expr  (34)
	p_expr : p_expr . IS_GREATER_EQUAL p_expr  (35)
	p_expr : p_expr . LOGICAL_AND p_expr  (36)
	p_expr : p_expr . LOGICAL_OR p_expr  (37)
	p_expr : MINUS p_expr .  (38)
	p_expr : p_expr . ASSIGNMENT p_expr  (40)
	p_expr : p_expr . LEFT_BRACKET p_expr RIGHT_BRACKET  (50)
	p_expr : p_expr . LEFT_BRACKET p_expr COLON p_expr RIGHT_BRACKET  (51)
	p_expr : p_expr . LEFT_BRACKET COLON p_expr RIGHT_BRACKET  (52)
	p_expr : p_expr . LEFT_BRACKET p_expr COLON RIGHT_BRACKET  (53)

	LEFT_BRACKET  shift 91
	NEWLINE  reduce 38
	PLUS  reduce 38
	MINUS  reduce 38
	TIMES  reduce 38
	DIVIDE  reduce 38
	MODSIGN  reduce 38
	LOGICAL_OR  reduce 38
	LOGICAL_AND  reduce 38
	IS_EQUAL  reduce 38
	IS_NOT_EQUAL  reduce 38
	IS_LESS_THAN  reduce 38
	IS_GREATER_THAN  reduce 38
	IS_LESS_EQUAL  reduce 38
	IS_GREATER_EQUAL  reduce 38
	LEFT_BRACE  reduce 38
	RIGHT_BRACE  reduce 38
	RIGHT_BRACKET  reduce 38
	RIGHT_PARENTHE  reduce 38
	ASSIGNMENT  reduce 38
	SEMICOLON  reduce 38
	COLON  reduce 38
	COMMA  reduce 38


53: shift/reduce conflict (shift 91, reduce 39) on LEFT_BRACKET
state 53
	p_expr : p_expr . PLUS p_expr  (25)
	p_expr : p_expr . MINUS p_expr  (26)
	p_expr : p_expr . TIMES p_expr  (27)
	p_expr : p_expr . DIVIDE p_expr  (28)
	p_expr : p_expr . MODSIGN p_expr  (29)
	p_expr : p_expr . IS_LESS_THAN p_expr  (30)
	p_expr : p_expr . IS_GREATER_THAN p_expr  (31)
	p_expr : p_expr . IS_NOT_EQUAL p_expr  (32)
	p_expr : p_expr . IS_EQUAL p_expr  (33)
	p_expr : p_expr . IS_LESS_EQUAL p_expr  (34)
	p_expr : p_expr . IS_GREATER_EQUAL p_expr  (35)
	p_expr : p_expr . LOGICAL_AND p_expr  (36)
	p_expr : p_expr . LOGICAL_OR p_expr  (37)
	p_expr : LOGICAL_NOT p_expr .  (39)
	p_expr : p_expr . ASSIGNMENT p_expr  (40)
	p_expr : p_expr . LEFT_BRACKET p_expr RIGHT_BRACKET  (50)
	p_expr : p_expr . LEFT_BRACKET p_expr COLON p_expr RIGHT_BRACKET  (51)
	p_expr : p_expr . LEFT_BRACKET COLON p_expr RIGHT_BRACKET  (52)
	p_expr : p_expr . LEFT_BRACKET p_expr COLON RIGHT_BRACKET  (53)

	PLUS  shift 78
	MINUS  shift 79
	TIMES  shift 80
	DIVIDE  shift 81
	MODSIGN  shift 82
	IS_EQUAL  shift 85
	IS_NOT_EQUAL  shift 86
	IS_LESS_THAN  shift 87
	IS_GREATER_THAN  shift 88
	IS_LESS_EQUAL  shift 89
	IS_GREATER_EQUAL  shift 90
	LEFT_BRACKET  shift 91
	NEWLINE  reduce 39
	LOGICAL_OR  reduce 39
	LOGICAL_AND  reduce 39
	LEFT_BRACE  reduce 39
	RIGHT_BRACE  reduce 39
	RIGHT_BRACKET  reduce 39
	RIGHT_PARENTHE  reduce 39
	ASSIGNMENT  reduce 39
	SEMICOLON  reduce 39
	COLON  reduce 39
	COMMA  reduce 39


state 54
	p_slice_type : LEFT_BRACKET RIGHT_BRACKET . p_type  (54)

	LEFT_BRACKET  shift 23
	KEYWORD_STRING  shift 95
	KEYWORD_INT  shift 96
	KEYWORD_FLOAT  shift 97
	KEYWORD_BOOL  shift 98
	KEYWORD_FUTURE  shift 99
	.  error

	p_type  goto 104
	p_slice_type  goto 101


state 55
	p_expr : p_expr . PLUS p_expr  (25)
	p_expr : p_expr . MINUS p_expr  (26)
	p_expr : p_expr . TIMES p_expr  (27)
	p_expr : p_expr . DIVIDE p_expr  (28)
	p_expr : p_expr . MODSIGN p_expr  (29)
	p_expr : p_expr . IS_LESS_THAN p_expr  (30)
	p_expr : p_expr . IS_GREATER_THAN p_expr  (31)
	p_expr : p_expr . IS_NOT_EQUAL p_expr  (32)
	p_expr : p_expr . IS_EQUAL p_expr  (33)
	p_expr : p_expr . IS_LESS_EQUAL p_expr  (34)
	p_expr : p_expr . IS_GREATER_EQUAL p_expr  (35)
	p_expr : p_expr . LOGICAL_AND p_expr  (36)
	p_expr : p_expr . LOGICAL_OR p_expr  (37)
	p_expr : p_expr . ASSIGNMENT p_expr  (40)
	p_expr : LEFT_PARENTHE p_expr . RIGHT_PARENTHE  (48)
	p_expr : p_expr . LEFT_BRACKET p_expr RIGHT_BRACKET  (50)
	p_expr : p_expr . LEFT_BRACKET p_expr COLON p_expr RIGHT_BRACKET  (51)
	p_expr : p_expr . LEFT_BRACKET COLON p_expr RIGHT_BRACKET  (52)
	p_expr : p_expr . LEFT_BRACKET p_expr COLON RIGHT_BRACKET  (53)
